--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
+    "build": "pnpm run prisma:generate && remix vite:build",
     "dev": "remix vite:dev",
     "lint": "biome check .",
     "start": "remix-serve ./build/server/index.js",
@@ -12,9 +12,15 @@
     "biome:check": "biome check .",
     "biome:fix": "biome check --write .",
     "format": "biome format --write .",
-    "check": "pnpm run biome:check && pnpm run typecheck"
+    "check": "pnpm run biome:check && pnpm run typecheck",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "prisma db seed"
   },
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "@remix-run/node": "^2.16.8",
     "@remix-run/react": "^2.16.8",
     "@remix-run/serve": "^2.16.8",
@@ -29,6 +35,7 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "prisma": "^6.11.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
