--- a/infra/package.json
+++ b/infra/package.json
@@ -8,7 +8,9 @@
     "up": "pulumi up",
     "destroy": "pulumi destroy",
     "biome:check": "biome check .",
-    "biome:fix": "biome check --write ."
+    "biome:fix": "biome check --write .",
+    "typecheck": "tsc --noEmit",
+    "check": "pnpm typecheck && pnpm biome:check"
   },
   "dependencies": {
     "@pulumi/azure-native": "^2.0.0",
