--- a/app/Dockerfile.production
+++ b/app/Dockerfile.production
@@ -10,7 +10,10 @@ WORKDIR /app
 # 依存関係ファイルをコピー
 COPY package.json pnpm-lock.yaml ./
 
-# 依存関係をインストール
+# Prismaスキーマファイルをコピー（prisma generateに必要）
+COPY prisma ./prisma
+
+# 依存関係をインストール（postinstallでprisma generateが実行される）
 RUN pnpm install --frozen-lockfile
 
 # アプリケーションファイルをコピー
@@ -40,8 +43,9 @@ COPY --from=builder --chown=nodejs:nodejs /app/build ./build
 COPY --from=builder --chown=nodejs:nodejs /app/public ./public
 COPY --from=builder --chown=nodejs:nodejs /app/package.json ./package.json
 COPY --from=builder --chown=nodejs:nodejs /app/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=builder --chown=nodejs:nodejs /app/prisma ./prisma
 
-# 本番用の依存関係のみインストール
+# 本番用の依存関係のみインストール（Prismaクライアントも生成される）
 RUN pnpm install --prod --frozen-lockfile
 
 # ユーザーを切り替え
