--- a/app/Dockerfile.production
+++ b/app/Dockerfile.production
@@ -44,9 +44,12 @@ COPY --from=builder --chown=nodejs:nodejs /app/public ./public
 COPY --from=builder --chown=nodejs:nodejs /app/package.json ./package.json
 COPY --from=builder --chown=nodejs:nodejs /app/pnpm-lock.yaml ./pnpm-lock.yaml
 COPY --from=builder --chown=nodejs:nodejs /app/prisma ./prisma
+# 生成済みのPrismaクライアントをコピー
+COPY --from=builder --chown=nodejs:nodejs /app/node_modules/.prisma ./node_modules/.prisma
+COPY --from=builder --chown=nodejs:nodejs /app/node_modules/@prisma ./node_modules/@prisma
 
-# 本番用の依存関係のみインストール（Prismaクライアントも生成される）
-RUN pnpm install --prod --frozen-lockfile
+# 本番用の依存関係のみインストール（--ignore-scriptsでpostinstallをスキップ）
+RUN pnpm install --prod --frozen-lockfile --ignore-scripts
 
 # ユーザーを切り替え
 USER nodejs
