--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,12 +55,15 @@ jobs:
           --registry-login-server ${{ env.REGISTRY_NAME }}.azurecr.io \
           --registry-username ${{ secrets.REGISTRY_USERNAME }} \
           --registry-password ${{ secrets.REGISTRY_PASSWORD }} \
+          --os-type Linux \
           --cpu 1 \
           --memory 1.5 \
           --restart-policy Always \
+          --dns-name-label ss-azure-staging \
+          --ports 80 \
           --environment-variables \
             NODE_ENV=production \
-            PORT=8080 \
+            PORT=80 \
             DATABASE_URL="${{ secrets.DATABASE_URL }}" \
           --location japaneast \
           --no-wait \
