--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,44 @@ env:
   IMAGE_NAME: ss-azure-app
 
 jobs:
+  # データベースマイグレーションジョブ
+  migrate-database:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      
+      - name: Install dependencies
+        working-directory: ./app
+        run: pnpm install
+      
+      - name: Generate Prisma Client
+        working-directory: ./app
+        run: pnpm exec prisma generate
+      
+      - name: Run database migrations
+        working-directory: ./app
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        run: |
+          echo "Running Prisma migrations..."
+          pnpm exec prisma migrate deploy
+          echo "Migrations completed successfully"
+
   build-and-push:
     runs-on: ubuntu-latest
+    needs: migrate-database  # マイグレーション完了後に実行
 
     steps:
       - name: Checkout code
