--- a/app/Dockerfile.production
+++ b/app/Dockerfile.production
@@ -50,6 +50,10 @@ COPY --from=builder --chown=nodejs:nodejs /app/prisma ./prisma
 # 生成済みのnode_modules全体をコピー（Prismaクライアントを含む）
 COPY --from=builder --chown=nodejs:nodejs /app/node_modules ./node_modules
 
+# エントリーポイントスクリプトをコピー
+COPY --chown=nodejs:nodejs docker-entrypoint.sh ./
+RUN chmod +x docker-entrypoint.sh
+
 # ポート80を非rootユーザーでも使用可能にする
 RUN apk add --no-cache libcap && \
     setcap 'cap_net_bind_service=+ep' /usr/local/bin/node
@@ -63,6 +67,9 @@ ENV PORT=80
 
 # ポートを公開
 EXPOSE 80
+
+# エントリーポイントを設定
+ENTRYPOINT ["./docker-entrypoint.sh"]
 
 # アプリケーション起動
 CMD ["pnpm", "start"]
